# django_blog

./: .gitignore  package.json  pyproject.toml  shell.nix  tailwind.config.js
src/authentication/: urls.py  views.py
src/authentication/templates/authentication/: index.html  login.html  register.html
src/base/: settings.py  urls.py
src/blog/: settings.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/blog/templates/: addpost.html  base.html  dashboard.html  home.html  login.html  navbar.html  signup.html  updatepost.html
src/blog/templates/blog/: index.html
src/jstoochain/: package-lock.json  package.json
src/landing/: urls.py
src/landing/templates/landing/: index.html
src/static/css/: output.css
src/templates/: base.html  navbar.html
