[project]
name = "django_blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dianp", email = "dprasmail@gmail.com"},
]
dependencies = [
    "django>=5.0.2",
    "granian>=1.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
create = "django-admin startproject {args}"
dev = "python src/manage.py runserver"
start-app = "python manage.py startapp"
cmd = "python manage.py"
granian-wsgi = "granian --interface wsgi blog.wsgi:application"